--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "framer-motion": "^4.0.3",
     "graphql": "^16.0.1",
     "next": "latest",
+    "next-urql": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
     "urql": "^2.0.5"
   },
   "devDependencies": {
