--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.ts",
-    "start2": "tsnd --respawn --transpile-only src/index.ts",
-    "create-migration": "mikro-orm migration:create"
+    "start2": "tsnd --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,31 +17,32 @@
     "@types/cookie-session": "^2.0.43",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.2",
     "@types/node": "^16.11.9",
+    "@types/nodemailer": "^6.4.4",
     "@types/redis": "^2.8.32",
+    "@types/uuid": "^8.3.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.9",
-    "@mikro-orm/core": "^4.5.9",
-    "@mikro-orm/migrations": "^4.5.9",
-    "@mikro-orm/postgresql": "^4.5.9",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
-    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.3.0",
+    "ioredis": "^4.28.2",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
-    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.41",
+    "uuid": "^8.3.2"
   },
   "mikro-orm": {
     "useTsNode": true,
