--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.4.2",
     "@chakra-ui/theme-tools": "1.1.2",
@@ -17,6 +18,7 @@
     "framer-motion": "^4.0.3",
     "graphql": "^16.0.1",
     "next": "latest",
+    "next-apollo": "^5.0.7",
     "next-urql": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,6 +31,7 @@
     "@graphql-codegen/typescript": "2.4.1",
     "@graphql-codegen/typescript-operations": "2.2.1",
     "@graphql-codegen/typescript-urql": "^3.4.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.2",
     "@types/node": "^14.6.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
